# funding-service-design-assessment-store

./: .env.development  .flaskenv  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Procfile  README.md  api.html  app.py  current_thinking.txt  db.html  dev-requirements.in  dev-requirements.txt  docker-compose.yml  index.html  invoke.yaml  manifest-dev.yml  manifest-test.yml  manifest.yml  mapping.json  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  search.js  tasks.py  test_sqlite.db  tests.html  wsgi.py
.devcontainer/: devcontainer.json
.run/: Python tests in tests.run.xml
_helpers/: __init__.py  application.py  context_aware_executor.py  custom_decorators.py  form.py  import_application.py  queue.py  scheduler_service.py  task_executer_service.py
api/: README.md  __init__.py  responses.py  routes.html
config/: __init__.py
data/: locations.json  locations_dev.json
db/: README.md  __init__.py  _helpers.py  models.html  queries.html  schemas.html
diagrams/: db_diagram.md
docs/: CHANGELOG.md  INDEX.md  README.md  index.html.jinja2  module.html.jinja2
openapi/: api.yml  apply_api.yml  assessment_config.yml  assessor_task_list.yml  components.yml  new.yml  utils.py
s41-dummy-json/: all_assessments_for_fund_round.json  flagging_notes.md  get_available_flag_allocations.json  get_available_tags.json  get_flags_for_application.json  notes.md  tagging_notes.md
scripts/: README.md  assessment-cof-reporting_comments.sql  assessment-cof-reporting_scores.sql  delete_data.py  (+14 more)
(+341 files in other folders)
