[project]
name = "funding-service-design-assessment-store"
version = "0.1.1"
description = "The funding service design assessment store for the DLUHC."
authors = ["Version One", "HM Government, Department of Levelling Up, Housing and Communities"]
license = "MIT License"

requires-python = ">=3.10, <3.11"
dependencies = [
    "alembic-utils==0.8.3",
    "connexion[flask,swagger-ui,uvicorn]>=3.1.0",
    "dataclass-dict-convert==1.7.3",
    "flask-apscheduler==1.13.1",
    "flask-migrate==4.0.7",
    "flask-sqlalchemy==3.1.1",
    "flask==3.0.3",
    "funding-service-design-utils>=5.0.8,<6.0.0",
    "jsonpath-rw-ext==1.2.2",
    "marshmallow-sqlalchemy==1.1.0",
    "openapi-spec-validator>=0.7.1",
    "prance==23.6.21.0",
    "psycopg2-binary==2.9.9",
    "requests==2.32.3",
    "sqlalchemy-utils>=0.41.2",
    "sqlalchemy>=2.0.30",
    "swagger-ui-bundle==1.1.0",
    "uvicorn==0.30.1",
]

[tool.black]
line-length = 120

[tool.docformatter]
recursive = true
wrap-summaries = 82
blank = true

[tool.flake8]
max-line-length = 120
count = true

[tool.uv]

[dependency-groups]
dev = [
    "black>=24.4.2",
    "colored>=2.2.4",
    "debugpy>=1.8.2",
    "deepdiff>=7.0.1",
    "flake8-pyproject>=1.2.3",
    "invoke>=2.2.0",
    "json2html==1.3.0",
    "moto[s3,sqs]==5.0.10",
    "pre-commit~=4.0.0",
    "pytest>=8.2.2",
    "pytest-env>=1.1.3",
    "pytest-flask>=1.3.0",
    "pytest-mock==3.14.0",
]
